js/src/tests/test262/built-ins/NativeErrors/TypeError/proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
TypeError
)
Error
)
;
reportCompare
(
0
0
)
;
